@@ -294,6 +294,9 @@ ProgressiveAlignment::ProgressiveAlignment(string treefile,string seqfile,string
                 root->alignSequences();
             }
 
+            this->updateIndelSites(root);
+
+
             if(WRITEITER)
             {
                 string fname = outfile+"."+itos(thisIteration);
@@ -359,32 +362,24 @@ ProgressiveAlignment::ProgressiveAlignment(string treefile,string seqfile,string
 void ProgressiveAlignment::updateIndelSites(AncestralNode *root)
 {
 //    cout<<endl;
-//    for(int i=0;i<root->getSequence()->length();i++)
-//        cout<<i<<" "<<root->getSequence()->isInsertion(i)<<" "<<root->getSequence()->isPermInsertion(i)<<endl;
-
-//    cout<<endl;
-//    for(int i=0;i<root->getSequence()->length();i++)
-//        cout<<i<<" "<<root->getLChild()->getSequence()->isInsertion(i)<<" "<<root->getLChild()->getSequence()->isPermInsertion(i)<<endl;
-
-//    cout<<endl;
-//    for(int i=0;i<root->getSequence()->length();i++)
-//        cout<<i<<" "<<root->getRChild()->getSequence()->isInsertion(i)<<" "<<root->getRChild()->getSequence()->isPermInsertion(i)<<endl;
+//    for(int i=0;i<root->getSequence()->lengthF();i++)
+//    {
+//        cout<<i<<" "<<root->getSequence()->isInsertion(i)<<" "<<root->getSequence()->isPermInsertion(i)<<" ; ";
+//        cout<<" "<<root->getLChild()->getSequence()->isInsertion(i)<<" "<<root->getLChild()->getSequence()->isPermInsertion(i)<<" ; ";
+//        cout<<" "<<root->getRChild()->getSequence()->isInsertion(i)<<" "<<root->getRChild()->getSequence()->isPermInsertion(i)<<endl;
+//    }
 
     for(int i=0;i<root->getSequence()->length();i++)
         if(not root->getSequence()->isInsertion(i))
             root->updateInsertionSite(i);
 
-    //    cout<<endl;
-    //    for(int i=0;i<root->getSequence()->length();i++)
-    //        cout<<i<<" "<<root->getSequence()->isInsertion(i)<<" "<<root->getSequence()->isPermInsertion(i)<<endl;
-
-    //    cout<<endl;
-    //    for(int i=0;i<root->getSequence()->length();i++)
-    //        cout<<i<<" "<<root->getLChild()->getSequence()->isInsertion(i)<<" "<<root->getLChild()->getSequence()->isPermInsertion(i)<<endl;
-
-    //    cout<<endl;
-    //    for(int i=0;i<root->getSequence()->length();i++)
-    //        cout<<i<<" "<<root->getRChild()->getSequence()->isInsertion(i)<<" "<<root->getRChild()->getSequence()->isPermInsertion(i)<<endl;
+//    cout<<endl;
+//    for(int i=0;i<root->getSequence()->length();i++)
+//    {
+//        cout<<i<<" "<<root->getSequence()->isInsertion(i)<<" "<<root->getSequence()->isPermInsertion(i)<<" ; ";
+//        cout<<" "<<root->getLChild()->getSequence()->isInsertion(i)<<" "<<root->getLChild()->getSequence()->isPermInsertion(i)<<" ; ";
+//        cout<<" "<<root->getRChild()->getSequence()->isInsertion(i)<<" "<<root->getRChild()->getSequence()->isPermInsertion(i)<<endl;
+//    }
 }
 
 
